# trash_detection_camera

./: README.md  pyproject.toml
app/: convert_to_onnx.py  main.py
app/detection/: detector.py  detector_onnx.py  utils.py
scripts/: run
